# fcitx-clone

./: ChangeLog  Makefile.am  configure  configure.in  fcitx.spec.in  shift-jis.txt
data/: Makefile.in  cj.mb  cj.txt  config  db.txt  erbi.mb  erbi.txt  gbkpy.org  gbks2t.tab  pyPhrase.org  pyphrase.mb  qxm.txt  tables.conf  wanfeng.txt  wbpy.txt  wbx.mb  wbx.txt  zrm.txt
png/: Makefile.am
src/: AutoEng.c  AutoEng.h  DBus.c  DBus.h  ImeRemote.c  InputWindow.c  InputWindow.h  MainWindow.c  MainWindow.h  Makefile.am  Makefile.in  PYFA.c  PYFA.h  QuickPhrase.c  about.c  fcitx.h  ime.c  ime.h  main.c  punc.c  punc.h  py.c  py.h  pyParser.c  pyParser.h  qw.c  sp.c  table.c  table.h  tools.c  tools.h  ui.c  utf8.c  utf8.h  vk.c  vk.h  xim.c  xim.h
src/core/: KeyList.c  KeyList.h  Makefile.am  MyErrorsHandlers.c  fcitx.h  ime.c  ime.h  main.c  xim.c
src/im/extra/: Makefile.am  extra.c  extra.h
src/im/pinyin/: Makefile.am  PYFA.h  py.c  py.h  pyParser.c  sp.c
src/im/qw/: Makefile.am  qw.c  qw.h
src/im/special/: AutoEng.c  Makefile.am  QuickPhrase.c  QuickPhrase.h  punc.c  vk.c  vk.h
src/im/table/: Makefile.am  table.c  table.h
src/interface/: DBus.c  DBus.h  ImeRemote.c  Makefile.am
src/tools/: Makefile.am  array.c  array.h  conf.c  conf.h  tools.c  tools.h  utf8_in_gb18030.c  util.c  util.h
src/ui/: InputWindow.c  InputWindow.h  MainWindow.c  MainWindow.h  Makefile.am  MenuWindow.c  MenuWindow.h  TrayWindow.c  about.c  skin.c  skin.h  tray.c  ui.c
tools/: Makefile.am  client-test.c  createPYMB.c  mb2org.c  mb2txt.c  pyjj2fcitx.c  readPYBase.c  readPYMB.c  txt2mb.c  win2fcitx.c
xpm/: Makefile.am  cs.conf
